--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,13 @@
 
 # misc
 .DS_Store
+.env
+.eslintcache
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.aviate-feature-list.odt
 
 npm-debug.log*
 yarn-debug.log*
