--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "swr": "^0.3.10",
     "web-vitals": "^0.2.4"
   },
