--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "http://arminebner.github.io/aviate",
   "name": "aviate",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://arminebner.github.io/aviate",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
