--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aviate",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://arminebner.github.io/aviate",
+  "homepage": "https://aviate.live",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
